--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,9 @@
-daemon==1.1
-Django==1.11
-django-model-utils==3.0.0
-djangorestframework==3.6.2
-gpio==0.2.0
-pytz==2017.2
-requests==2.13.0
-requests-futures==0.9.7
+daemon>=1.1
+Django>=2.0
+django-model-utils>=3.0.0
+djangorestframework>=3.8.2
+gpio>=0.2.0
+pytz>=2017.2
+requests>=2.13.0
+requests-futures>=0.9.7
+django-oauth-toolkit>=1.2.0
